# datafusion-ballista-iceberg

./: Cargo.toml  README.md  swagger.yml
datafusion-nessie/: Cargo.toml
datafusion-nessie/src/: main.rs  nessie_catalog_provider.rs
nessie-client/: Cargo.toml
nessie-client/src/: client.rs  error.rs  lib.rs  main.rs  models.rs
nessie-client/tests/: integration_test.rs
nessie-iceberg-catalog/: Cargo.toml
nessie-iceberg-catalog/src/: catalog.rs
test_data/db/test_iceberg/data/: .00000-0-bc6da0c1-f500-45d1-aa88-067bdc9f52d3-00001.parquet.crc  .00001-1-bc6da0c1-f500-45d1-aa88-067bdc9f52d3-00001.parquet.crc  00000-0-bc6da0c1-f500-45d1-aa88-067bdc9f52d3-00001.parquet  00001-1-bc6da0c1-f500-45d1-aa88-067bdc9f52d3-00001.parquet
test_data/db/test_iceberg/metadata/: .c21a22e4-c1a3-4821-8ea6-22d4343c0eb1-m0.avro.crc  .snap-4292585322385150940-1-c21a22e4-c1a3-4821-8ea6-22d4343c0eb1.avro.crc  .v1.metadata.json.crc  .v2.metadata.json.crc  c21a22e4-c1a3-4821-8ea6-22d4343c0eb1-m0.avro  snap-4292585322385150940-1-c21a22e4-c1a3-4821-8ea6-22d4343c0eb1.avro  v1.metadata.json  v2.metadata.json
