[package]
name = "nessie-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
iceberg = { version = "0.6.0", features = ["storage-s3", "storage-fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
url = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
